-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.2.0-beta1
-
None
The code
#include <type_traits>
int main() {}
leads to parse errors with a mingw toolchain and -std=gnu++0x (-std=c++11 works fine):
D:\usr\qt-5.6.0-mingw492_32\Tools\mingw492_32\i686-w64-mingw32\include\c++\type_traits:279:39: error: __float128 is not supported on this target
struct __is_floating_point_helper<__float128>
^
1 error generated.
This is reproducible out of the box with a qmake project and a mingw toolchain
because qmake passes on -std=gnu++0x (as result of CONFIG = c+11). To
reproduce with qbs, the cpp.cxxLanguageVersion has to be set explicitly to
gnu++0x.
- is duplicated by
-
QTCREATORBUG-17133 Windows: Warnings about being unable to parse system/runtimelib includes
-
- Closed
-