src/plugins/clangrefactoring/refactoringcompileroptionsbuilder.cpp
@@ -130,6 +130,7 @@ Utils::SmallStringVector RefactoringCompilerOptionsBuilder::build(CppTools::Proj
     optionsBuilder.addOptionsForLanguage(/*checkForBorlandExtensions*/ true);
     optionsBuilder.enableExceptions();
 
+    optionsBuilder.addDefineFloat128ForMingw();
     optionsBuilder.addDefineToAvoidIncludingGccOrMinGwIntrinsics();
     optionsBuilder.addToolchainAndProjectDefines();
     optionsBuilder.undefineCppLanguageFeatureMacrosForMsvc2015();
